--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,20 @@
 
 a { text-decoration: none; }
 
-li { list-style: none; }
+li { 
+  list-style: none;
+  color: var(--light-gray); 
+}
+
+ul.courses {
+  padding-left: 20px;
+}
+
+ul.courses li {
+  list-style-type: disc;
+  color: var(--light-gray);
+  margin-bottom: 5px;
+}
 
 img, ion-icon, a, button, time, span { display: block; }
 
@@ -964,10 +977,11 @@ main {
 .project-img {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: auto;
   border-radius: 16px;
   overflow: hidden;
   margin-bottom: 15px;
+  object-fit: contain;
 }
 
 .project-img::before {
